--- a/index.html
+++ b/index.html
@@ -26,7 +26,6 @@
 
   <!-- page -->
   <body class="page">
-
     <!-- header -->
     <header class="header">
       <div class="container header__container">
@@ -34,11 +33,13 @@
           <span class="header__web">Web</span>Studio
         </a>
 
-<!-- main-navigation -->
+        <!-- main-navigation -->
         <nav class="nav">
           <ul class="nav__list list">
             <li class="nav__item">
-              <a class="nav__link link nav__link--current" href="./index.html">Студія</a>
+              <a class="nav__link link nav__link--current" href="./index.html"
+                >Студія</a
+              >
             </li>
             <li class="nav__item">
               <a class="nav__link link" href="./portfolio.html">Портфоліо</a>
@@ -50,19 +51,22 @@
         </nav>
 
         <div class="header__group">
-          <ul class="header__contacts list">
-            <li class="list-item">
-              <a class="link" href="mailto:info@devstudio.com">
-                <svg class="header-icon" width="16" height="12">
+          <ul class="header-contacts list">
+            <li class="header-contacts__item">
+              <a
+                class="header-contacts__link link"
+                href="mailto:info@devstudio.com"
+              >
+                <svg class="header-contacts-icon" width="16" height="12">
                   <use href="./image/icons.svg#envelope"></use>
                 </svg>
                 info@devstudio.com
               </a>
             </li>
 
-            <li class="list-item">
-              <a class="link" href="tel:+380961111111">
-                <svg class="header-icon" width="10" height="16">
+            <li class="header-contacts__item">
+              <a class="header-contacts__link link" href="tel:+380961111111">
+                <svg class="header-contacts-icon" width="10" height="16">
                   <use href="./image/icons.svg#smartphone"></use>
                 </svg>
                 +38 096 111 11 11
