--- a/index.html
+++ b/index.html
@@ -78,11 +78,12 @@
     </header>
 
     <!-- studio page sections-->
-    <main class="studio">
+    <main>
+      <!-- hero-section -->
       <section class="hero">
-        <div class="container hero-container">
-          <h1 class="hero-title">Ефективні рішення для вашого бізнесу</h1>
-          <button class="hero-button" type="button" data-modal-open>
+        <div class="container hero__container">
+          <h1 class="hero__title">Ефективні рішення для вашого бізнесу</h1>
+          <button class="btn hero__btn" type="button" data-modal-open>
             Замовити послугу
           </button>
         </div>
