--- a/portfolio.html
+++ b/portfolio.html
@@ -28,8 +28,8 @@
   <body class="page">
     <!-- header -->
     <header class="header">
-      <div class="container header__container">
-        <a class="logo header__logo" href="" lang="en">
+      <div class="header__container container">
+        <a class="header__logo logo" href="" lang="en">
           <span class="header__web">Web</span>Studio
         </a>
     
@@ -52,7 +52,7 @@
           <ul class="header-contacts list">
             <li class="header-contacts__item">
               <a class="header-contacts__link link" href="mailto:info@devstudio.com">
-                <svg class="header-contacts-icon" width="16" height="12">
+                <svg class="header-contacts__icon" width="16" height="12">
                   <use href="./image/icons.svg#envelope"></use>
                 </svg>
                 info@devstudio.com
@@ -61,7 +61,7 @@
     
             <li class="header-contacts__item">
               <a class="header-contacts__link link" href="tel:+380961111111">
-                <svg class="header-contacts-icon" width="10" height="16">
+                <svg class="header-contacts__icon" width="10" height="16">
                   <use href="./image/icons.svg#smartphone"></use>
                 </svg>
                 +38 096 111 11 11
