--- a/index.html
+++ b/index.html
@@ -181,53 +181,58 @@
       </section>
 
       <!-- feature -->
-      <section class="section feature">
-        <div class="container feature-container">
+      <section class="feature section ">
+        <div class="feature__container container">
           <h2 class="visually-hidden">Особливості</h2>
-          <ul class="list feature-list">
-            <li class="feature-item">
-              <div class="feature-icons">
-                <svg class="feature-icon" width="70" height="70">
+
+          <ul class=" feature__list list">
+
+            <li class="feature__item">
+              <div class="feature__icons">
+                <svg class="feature__icon" width="70" height="70">
                   <use href="./image/icons.svg#antenna"></use>
                 </svg>
               </div>
-              <h3 class="feature-title">УВАГА ДО ДЕТАЛЕЙ</h3>
-              <p class="feature-subtitle">
+              <h3 class="feature__title">УВАГА ДО ДЕТАЛЕЙ</h3>
+              <p class="feature__subtitle">
                 Ідейні міркування, і навіть початок повсякденної роботи з
                 формування позиції.
               </p>
             </li>
-            <li class="feature-item">
-              <div class="feature-icons">
-                <svg class="feature-icon" width="70" height="70">
+
+            <li class="feature__item">
+              <div class="feature__icons">
+                <svg class="feature__icon" width="70" height="70">
                   <use href="./image/icons.svg#clock"></use>
                 </svg>
               </div>
-              <h3 class="feature-title">ПУНКТУАЛЬНІСТЬ</h3>
-              <p class="feature-subtitle">
+              <h3 class="feature__title">ПУНКТУАЛЬНІСТЬ</h3>
+              <p class="feature__subtitle">
                 Завдання організації, особливо рамки і місце навчання кадрів
                 тягне у себе.
               </p>
             </li>
-            <li class="feature-item">
-              <div class="feature-icons">
-                <svg class="feature-icon" width="70" height="70">
+
+            <li class="feature__item">
+              <div class="feature__icons">
+                <svg class="feature__icon" width="70" height="70">
                   <use href="./image/icons.svg#diagram"></use>
                 </svg>
               </div>
-              <h3 class="feature-title">ПЛАНУВАННЯ</h3>
-              <p class="feature-subtitle">
+              <h3 class="feature__title">ПЛАНУВАННЯ</h3>
+              <p class="feature__subtitle">
                 Так само консультація з широким активом значною мірою зумовлює.
               </p>
             </li>
-            <li class="feature-item">
-              <div class="feature-icons">
-                <svg class="feature-icon" width="70" height="70">
+
+            <li class="feature__item">
+              <div class="feature__icons">
+                <svg class="feature__icon" width="70" height="70">
                   <use href="./image/icons.svg#astronaut"></use>
                 </svg>
               </div>
-              <h3 class="feature-title">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
-              <p class="feature-subtitle">
+              <h3 class="feature__title">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
+              <p class="feature__subtitle">
                 Значимість цих проблем настільки очевидна, що реалізація
                 планових завдань.
               </p>
