--- a/index.html
+++ b/index.html
@@ -188,8 +188,8 @@
           <ul class=" feature__list list">
 
             <li class="feature__item">
-              <div class="feature__icons">
-                <svg class="feature__icon" width="70" height="70">
+              <div class="feature__icon">
+                <svg  width="70" height="70">
                   <use href="./image/icons.svg#antenna"></use>
                 </svg>
               </div>
@@ -201,8 +201,8 @@
             </li>
 
             <li class="feature__item">
-              <div class="feature__icons">
-                <svg class="feature__icon" width="70" height="70">
+              <div class="feature__icon">
+                <svg  width="70" height="70">
                   <use href="./image/icons.svg#clock"></use>
                 </svg>
               </div>
@@ -214,8 +214,8 @@
             </li>
 
             <li class="feature__item">
-              <div class="feature__icons">
-                <svg class="feature__icon" width="70" height="70">
+              <div class="feature__icon">
+                <svg  width="70" height="70">
                   <use href="./image/icons.svg#diagram"></use>
                 </svg>
               </div>
@@ -226,8 +226,8 @@
             </li>
 
             <li class="feature__item">
-              <div class="feature__icons">
-                <svg class="feature__icon" width="70" height="70">
+              <div class="feature__icon">
+                <svg  width="70" height="70">
                   <use href="./image/icons.svg#astronaut"></use>
                 </svg>
               </div>
