--- a/index.html
+++ b/index.html
@@ -242,43 +242,43 @@
       </section>
 
       <!-- doings -->
-      <section class="section doings">
-        <div class="container doings-container">
-          <h2 class="doings-title">Чим ми займаємося</h2>
-          <ul class="doings-list list">
-            <li class="doings-item">
+      <section class="doings section">
+        <div class="doings__container container ">
+          <h2 class="doings__title">Чим ми займаємося</h2>
+          <ul class="doings__list list">
+            <li class="doings__item">
               <img
                 src="image/img-01.jpg"
                 alt="людиа набирає текст на клавіатурі"
                 width="370"
                 height="294"
               />
-              <div class="doings-overlay">
-                <p class="doings-overlay-text">Десктопні додатки</p>
+              <div class="doings__overlay">
+                <p class="doings__text">Десктопні додатки</p>
               </div>
             </li>
 
-            <li class="doings-item">
+            <li class="doings__item">
               <img
                 src="image/img-02.jpg"
                 alt="людина дивиться на екран телефону"
                 width="370"
                 height="294"
               />
-              <div class="doings-overlay">
-                <p class="doings-overlay-text">Мобільні додатки</p>
+              <div class="doings__overlay">
+                <p class="doings__text">Мобільні додатки</p>
               </div>
             </li>
 
-            <li class="doings-item">
+            <li class="doings__item">
               <img
                 src="image/img-03.jpg"
                 alt="людиа дивиться на екран планшету"
                 width="370"
                 height="294"
               />
-              <div class="doings-overlay">
-                <p class="doings-overlay-text">Дизайнерські рішення</p>
+              <div class="doings__overlay">
+                <p class="doings__text">Дизайнерські рішення</p>
               </div>
             </li>
           </ul>
@@ -286,73 +286,73 @@
       </section>
 
       <!-- team -->
-      <section class="section team">
-        <h2 class="team-title">Наша команда</h2>
+      <section class="team section">
+        <h2 class="team__title">Наша команда</h2>
 
-        <div class="container team-container">
-          <ul class="team-list list">
-            <li class="team-content">
+        <div class="team__container container ">
+          <ul class="team__list list">
+            <li class="team-card">
               <img
                 src="image/img-1.jpg"
                 alt="фото дизайнера Ігора Дем'яненка"
                 width="270"
                 height="260"
               />
-              <div class="team-card">
-                <h3 class="team-list-title">Ігор Дем'яненко</h3>
-                <p class="team-list-subtitle" lang="en">Product Designer</p>
+              <div class="team-card__description">
+                <h3 class="team-card__title">Ігор Дем'яненко</h3>
+                <p class="team-card__subtitle" lang="en">Product Designer</p>
 
                 <!-- social-links -->
                 <ul class="socials list">
-                  <li class="socials-item">
+                  <li class="socials__item">
                     <a
-                      class="socials-link link"
+                      class="socials__link link"
                       href="https://instagram.com"
                       aria-label="Instagram"
                       target="_blank"
                       rel="noopener noreferrer"
                     >
-                      <svg class="socials-icon" width="20" height="20">
+                      <svg class="socials__icon" width="20" height="20">
                         <use href="./image/icons.svg#instagram"></use>
                       </svg>
                     </a>
                   </li>
 
-                  <li class="socials-item">
+                  <li class="socials__item">
                     <a
-                      class="socials-link link"
+                      class="socials__link link"
                       href="https://twitter.com"
                       aria-label="Twitter"
                       target="_blank"
                       rel="noopener noreferrer"
                     >
-                      <svg class="socials-icon" width="20" height="20">
+                      <svg class="socials__icon" width="20" height="20">
                         <use href="./image/icons.svg#twitter"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="socials-item">
+                  <li class="socials__item">
                     <a
-                      class="socials-link link"
+                      class="socials__link link"
                       href="https://facebook.com"
                       aria-label="Facebook"
                       target="_blank"
                       rel="noopener noreferrer"
                     >
-                      <svg class="socials-icon" width="20" height="20">
+                      <svg class="socials__icon" width="20" height="20">
                         <use href="./image/icons.svg#facebook"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="socials-item">
+                  <li class="socials__item">
                     <a
-                      class="socials-link link"
+                      class="socials__link link"
                       href="https://linkedin.com"
                       aria-label="Linkedin"
                       target="_blank"
                       rel="noopener noreferrer"
                     >
-                      <svg class="socials-icon" width="20" height="20">
+                      <svg class="socials__icon" width="20" height="20">
                         <use href="./image/icons.svg#linkedin"></use>
                       </svg>
                     </a>
@@ -361,67 +361,67 @@
               </div>
             </li>
 
-            <li class="team-content">
+            <li class="team-card">
               <img
                 src="image/img-2.jpg"
                 alt="фото дизайнера Ольги Репіної"
                 width="270"
                 height="260"
               />
-              <div class="team-card">
-                <h3 class="team-list-title">Ольга Рєпіна</h3>
-                <p class="team-list-subtitle" lang="en">Frontend Developer</p>
+              <div class="team-card__description">
+                <h3 class="team-card__title">Ольга Рєпіна</h3>
+                <p class="team-card__subtitle" lang="en">Frontend Developer</p>
 
                 <ul class="socials list">
-                  <li class="socials-item">
+                  <li class="socials__item">
                     <a
-                      class="socials-link link"
+                      class="socials__link link"
                       href="https://instagram.com"
                       aria-label="Instagram"
                       target="_blank"
                       rel="noopener noreferrer"
                     >
-                      <svg class="socials-icon" width="20" height="20">
+                      <svg class="socials__icon" width="20" height="20">
                         <use href="./image/icons.svg#instagram"></use>
                       </svg>
                     </a>
                   </li>
 
-                  <li class="socials-item">
+                  <li class="socials__item">
                     <a
-                      class="socials-link link"
+                      class="socials__link link"
                       href="https://twitter.com"
                       aria-label="Twitter"
                       target="_blank"
                       rel="noopener noreferrer"
                     >
-                      <svg class="socials-icon" width="20" height="20">
+                      <svg class="socials__icon" width="20" height="20">
                         <use href="./image/icons.svg#twitter"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="socials-item">
+                  <li class="socials__item">
                     <a
-                      class="socials-link link"
+                      class="socials__link link"
                       href="https://facebook.com"
                       aria-label="Facebook"
                       target="_blank"
                       rel="noopener noreferrer"
                     >
-                      <svg class="socials-icon" width="20" height="20">
+                      <svg class="socials__icon" width="20" height="20">
                         <use href="./image/icons.svg#facebook"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="socials-item">
+                  <li class="socials__item">
                     <a
-                      class="socials-link link"
+                      class="socials__link link"
                       href="https://linkedin.com"
                       aria-label="Linkedin"
                       target="_blank"
                       rel="noopener noreferrer"
                     >
-                      <svg class="socials-icon" width="20" height="20">
+                      <svg class="socials__icon" width="20" height="20">
                         <use href="./image/icons.svg#linkedin"></use>
                       </svg>
                     </a>
@@ -430,66 +430,66 @@
               </div>
             </li>
 
-            <li class="team-content">
+            <li class="team-card">
               <img
                 src="image/img-3.jpg"
                 alt="фото дизайнера Миколи Тарасова"
                 width="270"
                 height="260"
               />
-              <div class="team-card">
-                <h3 class="team-list-title">Микола Тарасов</h3>
-                <p class="team-list-subtitle" lang="en">Marketing</p>
+              <div class="team-card__description">
+                <h3 class="team-card__title">Микола Тарасов</h3>
+                <p class="team-card__subtitle" lang="en">Marketing</p>
                 <ul class="socials list">
-                  <li class="socials-item">
+                  <li class="socials__item">
                     <a
-                      class="socials-link link"
+                      class="socials__link link"
                       href="https://instagram.com"
                       aria-label="Instagram"
                       target="_blank"
                       rel="noopener noreferrer"
                     >
-                      <svg class="socials-icon" width="20" height="20">
+                      <svg class="socials__icon" width="20" height="20">
                         <use href="./image/icons.svg#instagram"></use>
                       </svg>
                     </a>
                   </li>
 
-                  <li class="socials-item">
+                  <li class="socials__item">
                     <a
-                      class="socials-link link"
+                      class="socials__link link"
                       href="https://twitter.com"
                       aria-label="Twitter"
                       target="_blank"
                       rel="noopener noreferrer"
                     >
-                      <svg class="socials-icon" width="20" height="20">
+                      <svg class="socials__icon" width="20" height="20">
                         <use href="./image/icons.svg#twitter"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="socials-item">
+                  <li class="socials__item">
                     <a
-                      class="socials-link link"
+                      class="socials__link link"
                       href="https://facebook.com"
                       aria-label="Facebook"
                       target="_blank"
                       rel="noopener noreferrer"
                     >
-                      <svg class="socials-icon" width="20" height="20">
+                      <svg class="socials__icon" width="20" height="20">
                         <use href="./image/icons.svg#facebook"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="socials-item">
+                  <li class="socials__item">
                     <a
-                      class="socials-link link"
+                      class="socials__link link"
                       href="https://linkedin.com"
                       aria-label="Linkedin"
                       target="_blank"
                       rel="noopener noreferrer"
                     >
-                      <svg class="socials-icon" width="20" height="20">
+                      <svg class="socials__icon" width="20" height="20">
                         <use href="./image/icons.svg#linkedin"></use>
                       </svg>
                     </a>
@@ -498,66 +498,66 @@
               </div>
             </li>
 
-            <li class="team-content">
+            <li class="team-card">
               <img
                 src="image/img-4.jpg"
                 alt="фото дизайнера Михайла Єрмакова"
                 width="270"
                 height="260"
               />
-              <div class="team-card">
-                <h3 class="team-list-title">Михайло Єрмаков</h3>
-                <p class="team-list-subtitle" lang="en">UI Designer</p>
+              <div class="team-card__description">
+                <h3 class="team-card__title">Михайло Єрмаков</h3>
+                <p class="team-card__subtitle" lang="en">UI Designer</p>
                 <ul class="socials list">
-                  <li class="socials-item">
+                  <li class="socials__item">
                     <a
-                      class="socials-link link"
+                      class="socials__link link"
                       href="https://instagram.com"
                       aria-label="Instagram"
                       target="_blank"
                       rel="noopener noreferrer"
                     >
-                      <svg class="socials-icon" width="20" height="20">
+                      <svg class="socials__icon" width="20" height="20">
                         <use href="./image/icons.svg#instagram"></use>
                       </svg>
                     </a>
                   </li>
 
-                  <li class="socials-item">
+                  <li class="socials__item">
                     <a
-                      class="socials-link link"
+                      class="socials__link link"
                       href="https://twitter.com"
                       aria-label="Twitter"
                       target="_blank"
                       rel="noopener noreferrer"
                     >
-                      <svg class="socials-icon" width="20" height="20">
+                      <svg class="socials__icon" width="20" height="20">
                         <use href="./image/icons.svg#twitter"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="socials-item">
+                  <li class="socials__item">
                     <a
-                      class="socials-link link"
+                      class="socials__link link"
                       href="https://facebook.com"
                       aria-label="Facebook"
                       target="_blank"
                       rel="noopener noreferrer"
                     >
-                      <svg class="socials-icon" width="20" height="20">
+                      <svg class="socials__icon" width="20" height="20">
                         <use href="./image/icons.svg#facebook"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="socials-item">
+                  <li class="socials__item">
                     <a
-                      class="socials-link link"
+                      class="socials__link link"
                       href="https://linkedin.com"
                       aria-label="Linkedin"
                       target="_blank"
                       rel="noopener noreferrer"
                     >
-                      <svg class="socials-icon" width="20" height="20">
+                      <svg class="socials__icon" width="20" height="20">
                         <use href="./image/icons.svg#linkedin"></use>
                       </svg>
                     </a>
