--- a/portfolio.html
+++ b/portfolio.html
@@ -20,7 +20,8 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-    <!-- styles -->
+    <!-- custom styles -->
+    <link rel="stylesheet" href="./css/main.min.css">
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <!-- page -->
