--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
           </ul>
         </nav>
 
-        <div class="header__group">
-          <ul class="header-contacts list">
+        <div class="header-contacts">
+          <ul class="header-contacts__list list">
             <li class="header-contacts__item">
               <a
                 class="header-contacts__link link"
