--- a/portfolio.html
+++ b/portfolio.html
@@ -49,8 +49,8 @@
           </ul>
         </nav>
     
-        <div class="header__group">
-          <ul class="header-contacts list">
+        <div class="header-contacts">
+          <ul class="header-contacts__list list">
             <li class="header-contacts__item">
               <a class="header-contacts__link link" href="mailto:info@devstudio.com">
                 <svg class="header-contacts__icon" width="16" height="12">
