--- a/portfolio.html
+++ b/portfolio.html
@@ -361,7 +361,7 @@
         <div class="footer-mailing">
           <p class="footer__title">Підпишіться на розсилку</p>
     
-          <form class="footer__form">
+          <form class="footer-form">
             <div class="footer-form__item">
               <input class="footer-form__field" type="email" name="email" id="footer-email" placeholder="E-mail" />
               <label for="footer-email"></label>
